# SDL2_image

./: CMakeLists.txt  IMG_bmp.c  IMG_gif.c  IMG_lbm.c  IMG_pcx.c  IMG_png.c  IMG_tga.c  IMG_webp.c  IMG_xcf.c  SDL_image.h  showimage.c
cmake/: SDL2_imageConfig.cmake.in
cmake/Hunter/: config.cmake
